# MOBv4

./: .gitignore  README.md  main.py  pyproject.toml  setup_env.bat  start_bot.bat
lib/: __init__.py  dice.py  mc_server_controller.py  ping.py  teams_manager.py
